clusters/homelab/apps/hubble-public/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hubble-public
  labels:
    expose-public: "true"
