clusters/homelab/apps/hubble-public/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: hubble-public-to-hubble-ui
  namespace: kube-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: hubble-public
  to:
    - group: ""
      kind: Service
      name: hubble-ui
